[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites - robot/character_0015.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites - robot/character_0016.png" type="Texture" id=2]
[ext_resource path="res://Robot.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/Hit.ogg" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "air",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "moving",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.3896, 9.39797 )

[node name="Robot" type="KinematicBody2D"]
collision_layer = 64
collision_mask = 142
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "moving"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.749153 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Signal" type="Timer" parent="."]
wait_time = 0.001

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -18.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Signal" to="." method="_on_Signal_timeout"]
